@@ -1,6 +1,12 @@
 # ChangeLog for sci-misc/lttoolbox
-# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*lttoolbox-3.3.3 (31 Aug 2017)
+
+  31 Aug 2017; Flammie Pirinen <flammie@gentoo.org> +lttoolbox-3.3.3.ebuild,
+  metadata.xml:
+  sci-misc/lttoolbox: version bump
 
 *lttoolbox-3.3.2 (05 Jan 2016)
 
